Added images and CSS

--- a/index.html
+++ b/index.html
@@ -9,7 +9,6 @@
     <link rel="stylesheet" href="assets/css/LineIcons.3.0.css">
 </head>
 <body>
-    <!-- Header -->
     <header class="navbar">
         <div class="container">
             <h1>GrowEasy Coin</h1>
@@ -22,8 +21,6 @@
             </nav>
         </div>
     </header>
-
-    <!-- Hero Section -->
     <section class="hero">
         <div class="container">
             <h2>Welcome to GrowEasy Coin</h2>
@@ -31,8 +28,6 @@
             <img src="assets/images/custom/coin.jpg" alt="GEC Coin" width="200">
         </div>
     </section>
-
-    <!-- Mining Section -->
     <section id="mining" class="section">
         <div class="container">
             <h2>Mining Zone</h2>
@@ -41,8 +36,6 @@
             <img src="assets/images/custom/neon.jpg" alt="Mining Neon" width="200">
         </div>
     </section>
-
-    <!-- Gaming Section -->
     <section id="games" class="section">
         <div class="container">
             <h2>Gaming Arena</h2>
@@ -50,8 +43,6 @@
             <img src="assets/images/custom/neon.jpg" alt="Gaming Neon" width="200">
         </div>
     </section>
-
-    <!-- Metaverse Section -->
     <section id="metaverse" class="section">
         <div class="container">
             <h2>Metaverse Portal</h2>
@@ -59,15 +50,11 @@
             <img src="assets/images/custom/meta.jpg" alt="Metaverse" width="200">
         </div>
     </section>
-
-    <!-- Footer -->
     <footer>
         <div class="container">
-            <p>&copy; 2025 GrowEasy Coin. All rights reserved.</p>
+            <p>© 2025 GrowEasy Coin. All rights reserved.</p>
         </div>
     </footer>
-
-    <!-- Scripts -->
     <script src="assets/js/bootstrap.min.js"></script>
     <script src="assets/js/main.js"></script>
 </body>
