Revamped to multi-page with animations and features

--- a/index.html
+++ b/index.html
@@ -3,10 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>GrowEasy Coin</title>
+    <title>GrowEasy Coin - Home</title>
     <link rel="stylesheet" href="assets/css/bootstrap.min.css">
     <link rel="stylesheet" href="assets/css/main.css">
     <link rel="stylesheet" href="assets/css/LineIcons.3.0.css">
+    <link rel="stylesheet" href="assets/css/animate.css">
 </head>
 <body>
     <header class="navbar">
@@ -14,40 +15,22 @@
             <h1>GrowEasy Coin</h1>
             <nav>
                 <ul>
-                    <li><a href="#mining">Mining</a></li>
-                    <li><a href="#games">Games</a></li>
-                    <li><a href="#metaverse">Metaverse</a></li>
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="mining.html">Mining</a></li>
+                    <li><a href="games.html">Games</a></li>
+                    <li><a href="metaverse.html">Metaverse</a></li>
+                    <li><a href="buy.html">Buy Coin</a></li>
+                    <li><a href="contact.html">Contact</a></li>
                 </ul>
             </nav>
         </div>
     </header>
     <section class="hero">
         <div class="container">
-            <h2>Welcome to GrowEasy Coin</h2>
-            <p>Your gateway to crypto, gaming, and the metaverse!</p>
-            <img src="assets/images/custom/coin.jpg" alt="GEC Coin" width="200">
-        </div>
-    </section>
-    <section id="mining" class="section">
-        <div class="container">
-            <h2>Mining Zone</h2>
-            <p>Start mining GEC with blockchain tech!</p>
-            <button onclick="alert('Mining Started!')" class="btn">Start Mining</button>
-            <img src="assets/images/custom/neon.jpg" alt="Mining Neon" width="200">
-        </div>
-    </section>
-    <section id="games" class="section">
-        <div class="container">
-            <h2>Gaming Arena</h2>
-            <p>Play & earn GEC coins!</p>
-            <img src="assets/images/custom/neon.jpg" alt="Gaming Neon" width="200">
-        </div>
-    </section>
-    <section id="metaverse" class="section">
-        <div class="container">
-            <h2>Metaverse Portal</h2>
-            <p>Explore the GrowEasy virtual world!</p>
-            <img src="assets/images/custom/meta.jpg" alt="Metaverse" width="200">
+            <h2 class="animate__animated animate__bounceIn">Welcome to GrowEasy Coin</h2>
+            <p>A revolutionary crypto ecosystem with gaming and metaverse!</p>
+            <img src="assets/images/custom/coin.jpg" alt="GEC Coin" class="glow">
+            <a href="buy.html" class="btn">Buy Now</a>
         </div>
     </section>
     <footer>
@@ -56,28 +39,7 @@
         </div>
     </footer>
     <script src="assets/js/bootstrap.min.js"></script>
-    <script src="assets/js/main.js"></script>
+    <script src="assets/js/wow.min.js"></script>
+    <script>new WOW().init();</script>
 </body>
 </html>
-<section id="mining" class="section">
-    <div class="container">
-        <h2>Mining Zone</h2>
-        <p>Start mining GEC with blockchain tech!</p>
-        <button onclick="alert('Mining Started!')" class="btn">Start Mining</button>
-        <img src="assets/images/custom/coin.jpg" alt="Mining Coin" width="200">
-    </div>
-</section>
-<section id="games" class="section">
-    <div class="container">
-        <h2>Gaming Arena</h2>
-        <p>Play & earn GEC coins!</p>
-        <img src="assets/images/custom/neon.jpg" alt="Gaming Neon" width="200">
-    </div>
-</section>
-<section id="metaverse" class="section">
-    <div class="container">
-        <h2>Metaverse Portal</h2>
-        <p>Explore the GrowEasy virtual world!</p>
-        <img src="assets/images/custom/meta.jpg" alt="Metaverse" width="200">
-    </div>
-</section>
